@@ -54,6 +54,7 @@ devscripts (2.15.10) UNRELEASED; urgency=medium
     + added LLGPL license (part of #806424)
     + also parse last 5kb of a file
     * tweaked to parse Artistic 2.0 license file
+    * improved detection of artistic 2.0 licenses
 
   [ Osamu Aoki ]
   * uscan:
